# trace-tracker-builder

./: .gitignore  LICENSE  README.md  RELEASE_NOTES_FORMAT.md  build.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: discord-release-notify.yml
app/: __init__.py  batch.py  builder.py  constants.py  email_export.py  history.py  logging_config.py  logo.py  parser.py  pdf_export.py  project.py  search.py  settings.py  splash.py  styles.py  titlegen.py  updater.py  validation.py  widgets.py  window.py
app/converters/: ats_parser.py  flag_mapper.py  standard_format_writer.py
app/design/: icons.py  tokens.py
app/pages/: batch_page.py  converter_page.py  dashboard_page.py  email_page.py  generate_page.py  history_page.py  import_page.py  projects_page.py  reorder_page.py  settings_page.py
app/widgets/: __init__.py  components.py  flag_review_widget.py  footer.py  item_editor.py  (+3 more)
samples/: FLOOR.csv  IP_Mansfield_RB2_Tracksheet_2026.xlsx
scripts/: generate_discord_icon.py  generate_icon.py  notify_discord_release.py  parse_release_notes.py
tests/: test_ats_parser.py  test_batch.py  test_builder.py  test_components.py  test_converter_page.py  test_email.py  test_flag_mapper.py  test_flag_review_widget.py  test_footer.py  test_history.py  test_icons.py  test_notify_discord_release.py  test_parse_release_notes.py  test_parser.py  test_project.py  test_search.py  test_sidebar.py  test_standard_format_writer.py  test_styles.py  test_titlegen.py  test_tokens.py  test_update_dialog.py  test_updater.py  test_validation.py  test_window_sidebar_wiring.py
(+21 files in other folders)
